personal projects added

--- a/index.html
+++ b/index.html
@@ -100,12 +100,14 @@
             <div class="title">
                 <h2>Proyectos personales</h2>
             </div>
-            <p>¡Pronto!</p>
-            <!--             <ul class="grid">
-                <li><a href="#" target="_blank">
+            <ul class="grid">
+                <li><a href="https://www.behance.net/gallery/111372029/Homebrew-D-D-items" target="_blank">
                         <img src="./assets/dnd.svg" alt="">
                     </a></li>
-            </ul> -->
+                <li><a href="https://abigailcolina.com/" target="_blank">
+                        <img src="./assets/abigailcolinafotografia.svg" alt="">
+                    </a></li>
+            </ul>
 
         </div>
     </div>
@@ -124,7 +126,8 @@
 
                 <p>Autodidacta y siempre dispuesta a aprender herramientas nuevas.</p>
 
-                <p>Durante la cuarentena obligatoria estoy aprendiendo sobre User Experience analizando user cases que incluyan research, user personas, MVP y user flow para aplicarlo en futuros proyectos.</p>
+                <p>Durante la cuarentena obligatoria estoy aprendiendo sobre User Experience analizando user cases que
+                    incluyan research, user personas, MVP y user flow para aplicarlo en futuros proyectos.</p>
 
                 <p>También puedes encontrarme en <a href="http://" target="_blank" rel="noopener noreferrer">Fiverr</a>
                     y <a href="http://" target="_blank" rel="noopener noreferrer">Upwork</a>.</p>
