--- a/index.html
+++ b/index.html
@@ -153,6 +153,78 @@
             <hr>
 
         </div>
+
+        <h2>Educación relevante</h2>
+        <div class="timeline">
+
+            <div class="card">
+                <h3>Diseño de interfaces</h3>
+                <h4>Platzi</h4>
+                <p>Curso</p>
+                <p>Enero 2021</p>
+            </div>
+            <div class="card">
+                <h3>UX Writing en Español</h3>
+                <h4>Marisol Parnofiello</h4>
+
+                <p>Libro</p>
+                <p>Enero 2021</p>
+            </div>
+            <div class="card">
+                <h3>Adobe XD</h3>
+                <h4>Platzi</h4>
+
+                <p>Curso</p>
+                <p>Octubre 2020</p>
+            </div>
+            <div class="card">
+                <h3>Introducción al Diseño</h3>
+                <h4>Platzi</h4>
+
+                <p>Curso</p>
+                <p>Agosto 2020</p>
+            </div>
+            <div class="card">
+                <h3>Responsive Web Design</h3>
+                <h4>FreeCodeCamp</h4>
+
+                <p>Curso</p>
+                <p>Agosto 2020</p>
+            </div>
+            <div class="card">
+                <h3>Creating a Great User Experience for Mobile Apps</h3>
+                <h4>FutureLearn</h4>
+
+                <p>Curso</p>
+                <p>Julio 2020</p>
+            </div>
+            <div class="card">
+                <h3>Introduction to UX and Accessible Design</h3>
+                <h4>FutureLearn</h4>
+
+                <p>Curso</p>
+                <p>Julio 2020</p>
+            </div>
+            <div class="card">
+                <h3>jQuery Tutorial</h3>
+                <h4>SoloLearn</h4>
+                <p>Curso</p>
+                <p>Septiembre 2019</p>
+            </div>
+            <div class="card">
+                <h3>JavaScript Tutorial</h3>
+                <h4>SoloLearn</h4>
+                <p>Curso</p>
+                <p>Septiembre 2019</p>
+            </div>
+            <div class="card">
+                <h3>Jira Fundamentals</h3>
+                <h4>Pluralsight</h4>
+                <p>Curso</p>
+                <p>Abril 2019</p>
+            </div>
+
+        </div>
     </div>
     </div>
     <footer>
