--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>✨ Abigail Colina | Diseñadora UI/UX | Maquetadora Web ✨</title>
     <meta name="title" property="og:title" content="✨ Abigail Colina | Diseñadora UI/UX | Maquetadora Web ✨">
     <meta name="description" property="og:description" content="UI/UX autodidacta con conocimiento de maquetado y web development.">
+    <meta name="image" property="og:image" content="https://colina.dev/assets/profile-pic.svg">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
