--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
         <div class="timeline">
 
             <div class="card">
+                <h3>Diseño UI/UX</h3>
+                <h4>Coderhouse</h4>
+                <p>Curso</p>
+                <p>Marzo 2021</p>
+            </div>
+            <div class="card">
+                <h3>User Experience: The Big Picture</h3>
+                <h4>Pluralsight</h4>
+                <p>Curso</p>
+                <p>Marzo 2021</p>
+            </div>
+            <div class="card">
                 <h3>Diseño de interfaces</h3>
                 <h4>Platzi</h4>
                 <p>Curso</p>
@@ -242,6 +254,12 @@
                 <h4>Pluralsight</h4>
                 <p>Curso</p>
                 <p>Abril 2019</p>
+            </div>
+            <div class="card">
+                <h3>Artes Cinematográficas</h3>
+                <h4>Universidad Central de Venezuela</h4>
+                <p>Licenciatura</p>
+                <p>2009 - 2015</p>
             </div>
 
         </div>
