--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
         <div class="section-diseno-web section" id="diseno-web">
             <h2>Diseño Web y mobile</h2>
             <ul class="grid">
-                <li><a href="https://www.behance.net/gallery/109022635/WEB-MOBILE-DESIGN-Dining-and-events"
+                <li><a href="https://www.behance.net/gallery/112784167/MercadoPago-POS-propuesta?tracking_source=project_owner_other_projects"
+                    target="_blank">
+                    <img src="./assets/mp.png" alt="">
+                </a></li>
+                <li><a href="https://www.behance.net/gallery/114739513/XD-Daily-Creative-Challenge-%28March%29"
+                        target="_blank">
+                        <img src="./assets/xdchallenge.png" alt="">
+                    </a></li>
+                    <li><a href="https://www.behance.net/gallery/109022635/WEB-MOBILE-DESIGN-Dining-and-events"
                         target="_blank">
                         <img src="./assets/desktop.svg" alt="">
                     </a></li>
