--- a/index.html
+++ b/index.html
@@ -184,10 +184,15 @@
 
         <h2>Educación relevante</h2>
         <div class="timeline">
-
             <div class="card">
                 <h3>Diseño UI/UX</h3>
                 <h4>Coderhouse</h4>
+                <p>Curso</p>
+                <p>Marzo 2021 - Junio 2021</p>
+            </div>
+            <div class="card">
+                <h3>Prototyping Techniques for UX Design</h3>
+                <h4>Pluralsight</h4>
                 <p>Curso</p>
                 <p>Marzo 2021</p>
             </div>
